Fixed navbar buttons alignment
Alligned navbar buttons to left and right.  also centerd some

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     background-color:black;
   }
 
-  
  header {
   background-color:red;
   color: white;
@@ -18,11 +17,25 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: red;
-  background-image: linear-gradient(180deg, red, tomato);
-
-  
 }
+
+  .headerButton {
+    border: none;
+    color: black;
+    font-size:20px;
+    margin: 10px;
+    padding: 8px;
+    overflow: hidden;
+  }
+
+  .left {
+    float: left;
+  }
+
+  .right {
+    float: right;
+  }
+
 
 li a {
   float: left;
